added badge data and prettied up coder page

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -13,6 +13,7 @@
         <script type="text/javascript" src="app/view/Main.js"></script>
         <script type="text/javascript" src="app/view/Coder.js"></script>
         <script type="text/javascript" src="app/model/Coder.js"></script>
+        <script type="text/javascript" src="app/model/Badge.js"></script>
         <script type="text/javascript" src="app/store/Coder.js"></script>
     </head>
     <body></body>
