fixing for phonegap build

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -6,6 +6,7 @@
         
         <link rel="stylesheet" href="libs/touch2/resources/css/sencha-touch.css" type="text/css">
         <script type="text/javascript" src="libs/touch2/sencha-touch-all.js"></script>
+        <script type="text/javascript" src="libs/phonegap-1.4.1.js"></script>
         <script type="text/javascript" src="app.js"></script>
         
         <script type="text/javascript" src="app/controller/Main.js"></script>
