--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -5,7 +5,7 @@
         <title>Coderwall</title>
         
         <link rel="stylesheet" href="libs/touch2/resources/css/sencha-touch.css" type="text/css">
-        <script type="text/javascript" src="libs/touch2/sencha-touch-all.js"></script>
+        <script type="text/javascript" src="libs/touch2/sencha-touch-debug.js"></script>
         <script type="text/javascript" src="libs/phonegap-1.4.1.js"></script>
         <script type="text/javascript" src="app.js"></script>
         
@@ -13,6 +13,7 @@
         <script type="text/javascript" src="app/controller/Coder.js"></script>
         <script type="text/javascript" src="app/view/Main.js"></script>
         <script type="text/javascript" src="app/view/Coder.js"></script>
+		<script type="text/javascript" src="app/view/BadgeListItem.js"></script>
         <script type="text/javascript" src="app/model/Coder.js"></script>
         <script type="text/javascript" src="app/model/Badge.js"></script>
         <script type="text/javascript" src="app/store/Coder.js"></script>
