--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -4,10 +4,14 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Coderwall</title>
         
+        <!-- DEBUGGER -->
+        <script src="http://192.168.10.110:8080/target/target-script-min.js#anonymous"></script>
+        
         <link rel="stylesheet" href="libs/touch2/resources/css/sencha-touch.css" type="text/css">
         <script type="text/javascript" src="libs/touch2/sencha-touch-debug.js"></script>
         <script type="text/javascript" src="libs/phonegap-1.4.1.js"></script>
         <script type="text/javascript" src="app.js"></script>
+
     </head>
     <body></body>
 </html>
