Fixing stuff, added About page

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -5,7 +5,7 @@
         <title>Coderwall</title>
         
         <!-- DEBUGGER -->
-        <script src="http://192.168.10.110:8080/target/target-script-min.js#anonymous"></script>
+        <!-- <script src="http://192.168.10.110:8080/target/target-script-min.js#anonymous"></script> -->
         
         <link rel="stylesheet" href="libs/touch2/resources/css/sencha-touch.css" type="text/css">
         <script type="text/javascript" src="libs/touch2/sencha-touch-debug.js"></script>
